# franka_sorting

./: .gitignore  .gitmodules  Dockerfile  README.md  bootstrap.sh  build.sh  clean_build.sh  run_docker.sh
install/: local_setup.sh  setup.sh
install/franka_msgs/share/franka_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/franka_msgs/share/franka_msgs/action/: ErrorRecovery.action  ErrorRecovery.idl  ErrorRecovery.json  Grasp.action  Grasp.idl  Grasp.json  Homing.action  Homing.idl  Homing.json  Move.action  Move.idl  Move.json  PTPMotion.action  PTPMotion.idl  PTPMotion.json
install/franka_msgs/share/franka_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_franka_msgs__rosidl_generator_cExport-release.cmake  export_franka_msgs__rosidl_generator_cExport.cmake  export_franka_msgs__rosidl_generator_cppExport.cmake  export_franka_msgs__rosidl_generator_pyExport-release.cmake  export_franka_msgs__rosidl_generator_pyExport.cmake  export_franka_msgs__rosidl_typesupport_fastrtps_cExport-release.cmake  export_franka_msgs__rosidl_typesupport_fastrtps_cExport.cmake  export_franka_msgs__rosidl_typesupport_fastrtps_cppExport-release.cmake  export_franka_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  franka_msgsConfig-version.cmake  franka_msgsConfig.cmake  franka_msgs__rosidl_typesupport_cExport-release.cmake  franka_msgs__rosidl_typesupport_cExport.cmake  franka_msgs__rosidl_typesupport_cppExport-release.cmake  franka_msgs__rosidl_typesupport_cppExport.cmake  rosidl_cmake-extras.cmake  (+6 more)
install/franka_sorting/share/franka_sorting/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/panda_description/share/panda_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
src/franka_perception/: package.xml  setup.cfg  setup.py
src/franka_perception/franka_perception/: block_detector.py  block_listener.py
src/franka_sorting/: CMakeLists.txt  package.xml
src/franka_sorting/config/: controllers_effort.yaml  controllers_position.yaml  franka_controllers.yaml
src/franka_sorting/description/: camera_only.urdf.xacro  franka.urdf.xacro  franka_camera.urdf.xacro
src/franka_sorting/franka_sorting/: bt_pick_and_place.py  bt_pick_place.py  gpd.py  home_pose.py  robot_interface.py
src/franka_sorting/launch/: franka_sim.launch.py  move_group.launch.py
src/franka_sorting/srdf/: panda.srdf.xacro
src/franka_sorting/world/: scene.sdf
src/panda_description/panda/: model.config
src/panda_description/urdf/: panda.ros2_control  panda.urdf.xacro
src/panda_description/worlds/: tabletop.sdf
(+338 files in other folders)
