<?xml version="1.0"?>
<?xml-model href=http://download.ros.org/schema/package_format3.xsd schematypens=http://www.w3.org/2001/XMLSchema?>
<package format="3">
  <name>franka_sorting</name>
  <version>0.0.0</version>
  <description>
    A system to identify colored primitives using an RGB-D camera and sort them by color 
    using a Franka arm in simulation[cite: 3, 5].
  </description>

  <!-- Everyone else needs to add your emails -->
  <maintainer email="davids86@purdue.edu">Andrew Davidson</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <depend>cv_bridge</depend>
  <depend>libopencv-dev</depend>

  <depend>moveit_ros_planning_interface</depend>
  <depend>franka_msgs</depend>
  <!-- <depend>franka_gripper</depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
